K8s/Dev/wepromolink_dev.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webclient-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webclient-app
  template:
    metadata:
      labels:
        app: webclient-app
    spec:
      containers:
        - name: webclient-container
          image: cod4it/web.wepromolink:$MICROSERVICE_WEB
          ports:
            - containerPort: 80
      imagePullSecrets:
      - name: dockerhub-secret  

---
apiVersion: v1
kind: Service
metadata:
  name: webclient-service
spec:
  selector:
    app: webclient-app
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
      name: http
    - port: 443
      protocol: TCP
      targetPort: 443
      name: https
  type: ClusterIP  # Cambia esto según el tipo de servicio que desees
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-my-ingress-2
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod-2"
    # nginx.ingress.kubernetes.io/rewrite-target: /
   # nginx.ingress.kubernetes.io/whitelist-source-range: "170.75.168.146/32"
    nginx.ingress.kubernetes.io/proxy-body-size: "8m"
spec:
  ingressClassName: nginx  # Especifica el nombre del controlador de Ingress que debe manejar las reglas definidas en este Ingress
  tls:
  # - hosts:
  #   - dev.wepromolink.com
  #   secretName: dev.wepromolink-tls
  - hosts:
    - wepromolink.com
    secretName: prod.wepromolink-tls
  rules:
    # - host: dev.wepromolink.com
    #   http:
    #     paths:
    #       - path: /
    #         pathType: Prefix
    #         backend:
    #           service:
    #             name: webclient-service
    #             port:
    #               number: 80
    - host: wepromolink.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webclient-service
                port:
                  number: 80
